Align issue app page yo integration

--- a/client/app/site/apps/show/app-page.less
+++ b/client/app/site/apps/show/app-page.less
@@ -21,49 +21,34 @@
           line-height: 17px;
           width: 130px;
         }
-        .btn-black{
-          padding: 0;
-          height: 30px;
-          line-height: 17px;
-          width: 130px;
-        }
     }
     .col-md-2{
       padding-left:0;
       padding-right:20px;
-      min-width:193px;
     }
-    .app-fixed-logo-container{
-      float: left;
-      width: 165px;
-      display: inline-block;
-    }
-    @media (max-width: 768px){
-      .app-fixed-logo-container{
-        width: 100%;
-      }
+    .col-md-2, .col-sm-3{
+      width:200px;
     }
     @media (min-width: 768px){
-      .col-sm-3{
-        width:20%;
-      }
       .col-sm-9{
-        width:74%;
+        width:73%;
       }
     }
     @media (min-width: 992px){
-      .col-md-2{
-        width:15%;
-      }
       .col-sm-9{
-        width:78%;
+        width:76%;
         padding-left:0;
         margin-left:20px;
       }
     }
     @media (min-width: 1217px){
       .col-sm-9{
-        width:82%;
+        width:81%;
+      }
+    }
+      @media (min-width: 1400px){
+        .col-sm-9{
+          width:84%;
       }
     }
     .app-screens-container{
@@ -76,12 +61,11 @@
         }
     }
     .app-page-detail{
-        padding-left: 0;
-        margin-left: 30px;
         p{
             margin-bottom: 16px;
         }
     }
+
     .app-page-subtitle{
         font-family: BrandonBold;
         font-size: 16px;
